--- a/javascript-course/introduction.html
+++ b/javascript-course/introduction.html
@@ -2,128 +2,236 @@
 <html lang="en">
 	<head>	
 		<title>Introduction to JavaScript</title>	
-		<script src="../js/jquery.min.js"></script> <!-- jquery libraries -->
-		<script src="../js/handlebars-v3.0.3.js"></script> <!-- handlebars libraries -->
-		<script src="../js/bootstrap.min.js"></script> <!-- bootstrap libraries -->
-		<link href="../css/bootstrap_blue.css" rel="stylesheet"> <!-- bootstrap styling -->	
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->	
+		<script src="../js/jquery.min.js"></script>
+		<script src="../js/handlebars-v3.0.3.js"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/date.js"></script>
+		<link rel="stylesheet" href="../css/bootstrap_plain.css">
+		<link rel="stylesheet" href="../css/styles.css">
 	</head>
 	
 	<body>
-		<div id="container">
-			<div class="row">
-				<div class="col-md-2">
-					<div id="content_left">
-						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="introduction.html">Introduction</a></li>
-							<li><a href="variables.html">Variables</a></li>
-							<li><a href="controlflow.html">Control Flow</a></li>
-							<li><a href="functions.html">Functions</a></li>
-							<li><a href="scope.html">Scope</a></li>
-							<li><a href="arrays.html">Arrays</a></li>
-							<li><a href="loops.html">Loops</a></li>
-							<li><a href="iterators.html">Iterators</a></li>
-							<li><a href="objects.html">Objects</a></li>
-							<li><a href="classes.html">Classes</a></li>
-							<li><a href="browser.html">Browser Compatibility and Transpilation</a></li>
-							<li><a href="modules.html">Modules</a></li>
-							<li><a href="request1.html">Requests I</a></li>
-							<li><a href="request2.html">Requests II</a></li>
-							<li><a href="../index.html">&larr; Back to Courses</a></li>
-						</ul>
-					</div>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle Navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<h1><a class="navbar-brand" href="../index.html">Codecademy Courses</a></h1>
 				</div>
-				<div class="col-md-10">
-					<div id="content_right">
-						<h1>Introduction to JavaScript</h1>
-						<h2>Introduction</h2>
-						<h3>Review Types and Operators</h3>
-						<p>Let's take one more glance at the concepts we just learned:</p>
-						<ul>
-							<li>Four essential data types in JavaScript include strings, numbers, booleans, and null.</li>
-							<li>Data is printed, or logged, to the console with console.log().</li>
-							<li>Four built-in mathematical operators include +, -, *, and /.</li>
-							<li>JavaScript associates certain properties with different data types.</li>
-							<li>JavaScript has built-in methods for different data types.</li>
-							<li>Libraries are collections of methods that can be called without an instance.</li>
-							<li>You can write single-line comments with // and multi-line comments between /* and */.</li>
-						</ul>
-					</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Command Line&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../command-line-course/navigating.html">Navigating the File System</a></li>
+								<li><a href="../command-line-course/viewing.html">Viewing and Changing the File System</a></li>
+								<li><a href="../command-line-course/redirecting.html">Redirecting Input and Output</a></li>
+								<li><a href="../command-line-course/configuring.html">Configuring the Environment</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">HTML&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../html-course/introduction.html">Introduction to HTML</a></li>
+								<li><a href="../html-course/standards.html">HTML Document Standards</a></li>
+								<li><a href="../html-course/tables.html">Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CSS&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../css-course/selectors.html">CSS Setup and Selectors</a></li>
+								<li><a href="../css-course/rules.html">CSS Visual Rules</a></li>
+								<li><a href="../css-course/model.html">The Box Model</a></li>
+								<li><a href="../css-course/changing.html">Changing the Box Model</a></li>
+								<li><a href="../css-course/display.html">CSS Display and Positioning</a></li>
+								<li><a href="../css-course/color.html">CSS Color</a></li>
+								<li><a href="../css-course/typography.html">CSS Typography</a></li>
+								<li><a href="../css-course/grid.html">CSS Grid Essentials</a></li>
+								<li><a href="../css-course/advanced.html">Advanced CSS Grid</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">JavaScript&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li class="active"><a href="introduction.html">Introduction</a></li>
+								<li><a href="variables.html">Variables</a></li>
+								<li><a href="controlflow.html">Control Flow</a></li>
+								<li><a href="functions.html">Functions</a></li>
+								<li><a href="scope.html">Scope</a></li>
+								<li><a href="arrays.html">Arrays</a></li>
+								<li><a href="loops.html">Loops</a></li>
+								<li><a href="iterators.html">Iterators</a></li>
+								<li><a href="objects.html">Objects</a></li>
+								<li><a href="classes.html">Classes</a></li>
+								<li><a href="browser.html">Browser Compatibility and Transpilation</a></li>
+								<li><a href="modules.html">Modules</a></li>
+								<li><a href="request1.html">Requests I</a></li>
+								<li><a href="request2.html">Requests II</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PHP&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../php-course/introduction.html">Introduction to PHP</a></li>
+								<li><a href="../php-course/strings.html">PHP Strings and Variables</a></li>
+								<li><a href="../php-course/numbers.html">PHP Numbers</a></li>
+								<li><a href="../php-course/functions.html">Introduction to PHP Functions</a></li>
+								<li><a href="../php-course/builtin.html">Intro to Built-in PHP Functions</a></li>
+								<li><a href="../php-course/ordered.html">Ordered Arrays</a></li>
+								<li><a href="../php-course/associative.html">Associative Arrays</a></li>
+								<li><a href="../php-course/html.html">PHP and HTML</a></li>
+								<li><a href="../php-course/form.html">HTML Form Handling in PHP</a></li>
+								<li><a href="../php-course/comparison.html">Booleans and Comparison Operators</a></li>
+								<li><a href="../php-course/conditions.html">Logical Operators and Compound Conditions</a></li>
+								<li><a href="../php-course/loops.html">Loops</a></li>
+								<li><a href="../php-course/loops2.html">Loops in HTML</a></li>
+								<li><a href="../php-course/validation.html">Introduction to Form Validation</a></li>
+								<li><a href="../php-course/regex.html">Introduction to Regular Expressions</a></li>
+								<li><a href="../php-course/validation2.html">Introduction to PHP Form Validation</a></li>
+								<li><a href="../php-course/classes.html">Classes and Objects</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SQL&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../sql-course/manipulation.html">Manipulation</a></li>
+								<li><a href="../sql-course/queries.html">Queries</a></li>
+								<li><a href="../sql-course/functions.html">Aggregate Functions</a></li>
+								<li><a href="../sql-course/tables.html">Multiple Tables</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Java&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../java-course/hello.html">Hello World</a></li>
+								<li><a href="../java-course/variables.html">Variables</a></li>
+								<li><a href="../java-course/manipulating.html">Manipulating Variables</a></li>
+								<li><a href="../java-course/classes.html">Introduction to Classes</a></li>
+								<li><a href="../java-course/methods.html">Methods</a></li>
+								<li><a href="../java-course/conditionals.html">Conditionals and Control Flow</a></li>
+								<li><a href="../java-course/operators.html">Conditional Operators</a></li>
+								<li><a href="../java-course/arrays.html">Arrays</a></li>
+								<li><a href="../java-course/arraylists.html">ArrayLists</a></li>
+								<li><a href="../java-course/loops.html">Loops</a></li>
+								<li><a href="../java-course/string.html">String Methods</a></li>
+								<li><a href="../java-course/inheritance.html">Inheritance and Polymorphism</a></li>
+								<li><a href="../java-course/debugging.html">Debugging</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources&nbsp;<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="../resources.html#command-line-resources">Command Line</a></li>
+								<li><a href="../resources.html#html-resources">HTML</a></li>
+								<li><a href="../resources.html#css-resources">CSS</a></li>
+								<li><a href="../resources.html#javascript-resources">JavaScript</a></li>
+								<li><a href="../resources.html#php-resources">PHP</a></li>
+								<li><a href="../resources.html#sql-resources">SQL</a></li>
+								<li><a href="../resources.html#java-resources">Java</a></li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-            </div>
+			</div>
+		</nav>
+		
+		<div class="container">
+			<ol class="breadcrumb">
+				<li>JavaScript</li>
+				<li>Introduction</li>
+			</ol>
+			<h2>Introduction</h2>
+			<h3>Review Types and Operators</h3>
+			<p>Let's take one more glance at the concepts we just learned:</p>
+			<ul>
+				<li>Four essential data types in JavaScript include strings, numbers, booleans, and null.</li>
+				<li>Data is printed, or logged, to the console with console.log().</li>
+				<li>Four built-in mathematical operators include +, -, *, and /.</li>
+				<li>JavaScript associates certain properties with different data types.</li>
+				<li>JavaScript has built-in methods for different data types.</li>
+				<li>Libraries are collections of methods that can be called without an instance.</li>
+				<li>You can write single-line comments with // and multi-line comments between /* and */.</li>
+			</ul>
 		</div>
 
+		<footer>
+			<div class="container">
+				<hr>
+				<div id="today"></div>
+			</div>
+		</footer>
+
 		<script type="text/javascript">	
-		// Log Favorite Pizza Topping to Console
-		console.log("Banana Peppers");
-	
-		// Log Favorite Movie to Console
-		console.log("Sabrina");
-	
-		// Primitive Data Types - Simplest built-in forms of data, included below
-		// Log String to Console - Any grouping of keyboard characters surrounded by single or double quotes
-		console.log('JavaScript');
-	
-		// Log Number to Console - Any number, including numbers with decimals
-		console.log(33.7);
-	
-		// Log Boolean to Console - Either true or false, with no quotations
-		console.log(true);
-	
-		// Log Null to Console - Can only be null, absence of value
-		console.log(null);
-	
-		// Math Operators
-		// Log Add Operator to Console
-		console.log(36 + 3.5);
-	
-		// Log Subtract Operator to Console
-		console.log(2018 - 1969);
-	
-		// Log Divide Operator to Console
-		console.log(65 / 240);
-	
-		// Log Multiply Operator to Console
-		console.log(0.2708 * 100);
-	
-		// Instance - Individual case of a data type, object
-		// Log Number of Characters in String to Console with Length Property
-		console.log('Teaching the world how to code'.length);
-	
-		// Methods - Calculate new information, perform actions that generate an output
-		// String Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/prototype
-		// Math Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math
-		// Number Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number
-		// Log String to Console in All Caps with toUpperCase Method
-		console.log('Codecademy'.toUpperCase());
-	
-		// Log String to Console without Whitespace with Trim Method
-		console.log('    Remove whitespace   '.trim());
-	
-		// Libraries - Contain methods that you can call without creating an instance
-		// Log Random Number Multiplied by 100 to Console with Random Method from Math Library
-		console.log(Math.random() * 100);
-	
-		// Log Resulting Whole Number to Console with Floor Method from Math Library
-		console.log(Math.floor(Math.random() * 100));
-	
-		// Log Smallest Integer Greater Than or Equal to 43.8 to Console with Ceil Method from Math Library
-		console.log(Math.ceil(43.8));
-	
-		// Log if 2017 is Integer to Console with isInteger Method from Number Library
-		console.log(Number.isInteger(2017));
-	
-		// Comments - Not evaluated by programs, describe what the code does
-		// Single Line Comment - Comment out a single line, denoted with two forward slashed preceding line
-		// Multi-line Comment - Comment out multiple lines, denoted with /* to begin and */ to end comment
-		/* Examples of single line comments are above,
-		   while this is an example of a
-		   multi-line comment!*/
-		</script>	
+			// Log Favorite Pizza Topping to Console
+			console.log("Banana Peppers");
+		
+			// Log Favorite Movie to Console
+			console.log("Sabrina");
+		
+			// Primitive Data Types - Simplest built-in forms of data, included below
+			// Log String to Console - Any grouping of keyboard characters surrounded by single or double quotes
+			console.log('JavaScript');
+		
+			// Log Number to Console - Any number, including numbers with decimals
+			console.log(33.7);
+		
+			// Log Boolean to Console - Either true or false, with no quotations
+			console.log(true);
+		
+			// Log Null to Console - Can only be null, absence of value
+			console.log(null);
+		
+			// Math Operators
+			// Log Add Operator to Console
+			console.log(36 + 3.5);
+		
+			// Log Subtract Operator to Console
+			console.log(2018 - 1969);
+		
+			// Log Divide Operator to Console
+			console.log(65 / 240);
+		
+			// Log Multiply Operator to Console
+			console.log(0.2708 * 100);
+		
+			// Instance - Individual case of a data type, object
+			// Log Number of Characters in String to Console with Length Property
+			console.log('Teaching the world how to code'.length);
+		
+			// Methods - Calculate new information, perform actions that generate an output
+			// String Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/prototype
+			// Math Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math
+			// Number Library @ https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number
+			// Log String to Console in All Caps with toUpperCase Method
+			console.log('Codecademy'.toUpperCase());
+		
+			// Log String to Console without Whitespace with Trim Method
+			console.log('    Remove whitespace   '.trim());
+		
+			// Libraries - Contain methods that you can call without creating an instance
+			// Log Random Number Multiplied by 100 to Console with Random Method from Math Library
+			console.log(Math.random() * 100);
+		
+			// Log Resulting Whole Number to Console with Floor Method from Math Library
+			console.log(Math.floor(Math.random() * 100));
+		
+			// Log Smallest Integer Greater Than or Equal to 43.8 to Console with Ceil Method from Math Library
+			console.log(Math.ceil(43.8));
+		
+			// Log if 2017 is Integer to Console with isInteger Method from Number Library
+			console.log(Number.isInteger(2017));
+		
+			// Comments - Not evaluated by programs, describe what the code does
+			// Single Line Comment - Comment out a single line, denoted with two forward slashed preceding line
+			// Multi-line Comment - Comment out multiple lines, denoted with /* to begin and */ to end comment
+			/* Examples of single line comments are above,
+			   while this is an example of a
+			   multi-line comment!*/
+		</script>
 	</body>	
 </html>
